--- a/spec/runner.html
+++ b/spec/runner.html
@@ -18,6 +18,7 @@
     <script src="../node_modules/mocha/mocha.js"></script>
     <script>mocha.setup('bdd');</script>
     <script src="./TrackFace.js"></script>
+    <script src="./WireframeFace.js"></script>
     <script>
       if (window.mochaPhantomJS) {
         mochaPhantomJS.run();
